# legal_analytics

./: LICENSE.txt  README.md  pyproject.toml
01_Dados/Dados_brutos/: Base_Juridico.xlsx
01_Dados/Dados_processados_limpos/: base-dados-tratada.xlsx
05_Documentacao/01_Power_point/: Otimização de Custos de Ações Judiciais.pptx
05_Documentacao/02_Arquivos_doc_pdf/: Projeto XYZ.docx
