[tool.poetry]
name = "legal-analytics"
version = "0.1.0"
description = ""
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
